--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ header .container {
   background: #fff;
   border-bottom: 1px solid#ccc;
   margin: 0;
-  padding: 0 16px;
+  padding: 0 16px 8px;
   position: fixed;
   top: 0;
   left: 0;
