--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ header h1 img {
 
 header p {
   text-align: center;
-  margin: 0 0 8px;
+  margin: 0 0 16px;
   padding: 0;
 }
 
@@ -284,7 +284,7 @@ ul.menuList {
 
 .menuList li {
   text-align: center;
-  margin: 0 0 16px;
+  margin: 0 0 48px;
   padding: 0;
 }
 
@@ -296,6 +296,7 @@ ul.menuList {
 .menuList img{
   width: 100%;
   height: 220px;
+  margin: 24px 0;
   object-fit: cover;
   vertical-align: bottom;
 }
@@ -310,6 +311,9 @@ ul.menuList {
   margin-bottom: 36px;
 }
 
+.map {
+  margin: 24px 0;
+}
 iframe {
   width: 100%;
   max-width: 600px;
@@ -357,7 +361,6 @@ footer img {
     margin: 110px 0 0;
     line-height: 2;
     font-size: 16px;
-    /* padding-top: 110px; */
   }
 
   #section1 {
@@ -378,19 +381,15 @@ footer img {
     padding-top: 110px;
     margin-top: -110px;
   }
-  
-  header {
-    margin-bottom: 36px;
-  }
-  
+
+/* HEADER */
+
   header .container {
-    /* display: flex; */
     justify-content: center;
     width: 100%;
     display: block;
     background: #fff;
     border-bottom: 1px solid#ccc;
-    /* position: absolute; */
     margin: 0 auto;
     padding: 0;
   }
@@ -426,15 +425,11 @@ footer img {
   .pc-menu a {
     display: block;
     width: 80px;
-    /* font-size: 14px; */
     text-align: center;
     text-decoration: none;
     cursor: pointer; 
   }
 
-  /* header p {
-    margin-top: 8px;
-  } */
 
   .carousel {
     width: 100%;
@@ -445,8 +440,7 @@ footer img {
     position: relative;
   }
 
-
-
+/* MENU */
   ul.menuList {
     display: flex;
     justify-content: space-between;
@@ -455,6 +449,77 @@ footer img {
 
   .menuList li {
     margin: 0 8px;
+  }
+
+/* ACCESS   */
+  .info {
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
+  }
+
+  .goto {
+    text-align: left;
+    margin-left: 32px;
+  }
+}
+
+@media (min-width: 800px){
+  body {
+    margin: 88px 0 0;
+    line-height: 2;
+    font-size: 16px;
+  }
+
+  #section1 {
+    padding-top: 88px;
+    margin-top: -88px;
+  }
+  
+  #section2 {
+    padding-top: 88px;
+    margin-top: -88px;
+  }
+  
+  #section3 {
+    padding-top: 88px;
+    margin-top: -88px;
+  }
+  #section4 {
+    padding-top: 88px;
+    margin-top: -88px;
+  }
+  header .container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    background: #fff;
+    border-bottom: 1px solid#ccc;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  header h1 img {  
+    width: 400px;
+    margin: 4px 16px 0 0;
+    line-height: 64px;
+    vertical-align: bottom;
+  }  
+    
+  .pc-menu ul {
+    list-style: none;
+    margin: 24px auto;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .pc-menu a {
+    display: block;
+    width: 80px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer; 
   }
 
 }
